# Hello-World-Wasmcompute

./: Cargo.toml  README.md  wasmcompute.yaml
migrations/: init.sql  user_log.sql
src/: main.rs
src/models/: comments.rs  mod.rs  users.rs
templates/: index.html
