[package]
name = "helloworld"
version = "0.1.0"
authors = ["Alec Di Vito <divito.alec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasmcompute-lib = { path = "/Users/divitoa/Documents/RUST/wasmcompute-redis"}
